@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://nashosdb_user:XmKzI56dLHJYHBBtmD9qPJGVJOlxJU6K@dpg-cta9hst6l47c73bk52dg-a.singapore-postgres.render.com/nashosdb"
+
+# Site password protection
+SITE_PASSWORD="bluebeam"
