@@ -1,6 +1,3 @@
-// This is your Prisma schema file,
-// learn more about it in the docs: https://pris.ly/d/prisma-schema
-
 generator client {
   provider = "prisma-client-js"
 }
@@ -11,68 +8,60 @@ datasource db {
 }
 
 model Location {
-  id        String   @id @default(cuid())
-  aisle     String
-  bay       String
-  height    String
-  label     String   @unique // Computed field: {aisle}-{bay}-{height}
-  createdAt DateTime @default(now())
-  updatedAt DateTime @updatedAt
-  type      String   // e.g., "BAY", "AISLE", etc.
-
-  // Relations
-  stocks            Stock[]
-  fromTransactions  Transaction[] @relation("FromLocation")
-  toTransactions    Transaction[] @relation("ToLocation")
-  putawayBatches    PutawayBatch[]
+  id               String         @id @default(cuid())
+  aisle            String
+  bay              String
+  height           String
+  label            String         @unique
+  createdAt        DateTime       @default(now())
+  updatedAt        DateTime       @updatedAt
+  type             String
+  putawayBatches   PutawayBatch[]
+  stocks           Stock[]
+  fromTransactions Transaction[]  @relation("FromLocation")
+  toTransactions   Transaction[]  @relation("ToLocation")
 
   @@index([label])
 }
 
 model Company {
-  id          String   @id @default(cuid())
-  code        String   @unique
-  createdAt   DateTime @default(now())
-  updatedAt   DateTime @updatedAt
-
-  // Relations
-  items       Item[]
-  users       User[]
+  id        String   @id @default(cuid())
+  code      String   @unique
+  createdAt DateTime @default(now())
+  updatedAt DateTime @updatedAt
+  items     Item[]
+  users     User[]
 
   @@index([code])
 }
 
 model Item {
-  id          String   @id @default(cuid())
-  sku         String
-  name        String
-  description String?
-  barcode     String
-  createdAt   DateTime @default(now())
-  updatedAt   DateTime @updatedAt
-
-  // Relations
-  company     Company  @relation(fields: [companyId], references: [id])
-  companyId   String
-  stocks      Stock[]
+  id           String        @id @default(cuid())
+  sku          String
+  name         String
+  description  String?
+  barcode      String
+  createdAt    DateTime      @default(now())
+  updatedAt    DateTime      @updatedAt
+  companyId    String
+  company      Company       @relation(fields: [companyId], references: [id])
+  stocks       Stock[]
   transactions Transaction[]
 
-  @@unique([companyId, sku])    // SKU must be unique within a company
-  @@unique([companyId, barcode]) // Barcode must be unique within a company
+  @@unique([companyId, sku])
+  @@unique([companyId, barcode])
   @@index([companyId, sku, barcode])
 }
 
 model Stock {
-  id          String   @id @default(cuid())
-  quantity    Int
-  createdAt   DateTime @default(now())
-  updatedAt   DateTime @updatedAt
-
-  // Relations
-  item        Item     @relation(fields: [itemId], references: [id])
-  itemId      String
-  location    Location @relation(fields: [locationId], references: [id])
-  locationId  String
+  id         String   @id @default(cuid())
+  quantity   Int
+  createdAt  DateTime @default(now())
+  updatedAt  DateTime @updatedAt
+  itemId     String
+  locationId String
+  item       Item     @relation(fields: [itemId], references: [id])
+  location   Location @relation(fields: [locationId], references: [id])
 
   @@unique([itemId, locationId])
   @@index([itemId])
@@ -80,20 +69,20 @@ model Stock {
 }
 
 model Transaction {
-  id             String        @id @default(cuid())
-  type           TransactionType
+  id             String          @id @default(cuid())
   quantity       Int
+  type           TransactionType
+  createdAt      DateTime        @default(now())
   itemId         String
-  item           Item          @relation(fields: [itemId], references: [id])
-  toLocationId   String?
-  toLocation     Location?     @relation("ToLocation", fields: [toLocationId], references: [id])
   fromLocationId String?
-  fromLocation   Location?     @relation("FromLocation", fields: [fromLocationId], references: [id])
-  createdAt      DateTime      @default(now())
-  putawayBatchId String?
-  putawayBatch   PutawayBatch? @relation(fields: [putawayBatchId], references: [id])
-  user           User?         @relation(fields: [userId], references: [id])
+  toLocationId   String?
   userId         String?
+  putawayBatchId String?
+  fromLocation   Location?       @relation("FromLocation", fields: [fromLocationId], references: [id])
+  item           Item            @relation(fields: [itemId], references: [id])
+  putawayBatch   PutawayBatch?   @relation(fields: [putawayBatchId], references: [id])
+  toLocation     Location?       @relation("ToLocation", fields: [toLocationId], references: [id])
+  user           User?           @relation(fields: [userId], references: [id])
 
   @@index([itemId])
   @@index([fromLocationId])
@@ -103,30 +92,28 @@ model Transaction {
 }
 
 model User {
-  id            String    @id @default(cuid())
-  username      String    @unique
-  passwordHash  String
-  role          UserRole
-  createdAt     DateTime  @default(now())
-  updatedAt     DateTime  @updatedAt
-
-  // Relations
-  company       Company?  @relation(fields: [companyId], references: [id])
-  companyId     String?
-  transactions  Transaction[]
+  id           String        @id @default(cuid())
+  username     String        @unique
+  passwordHash String
+  role         UserRole
+  createdAt    DateTime      @default(now())
+  updatedAt    DateTime      @updatedAt
+  companyId    String?
+  transactions Transaction[]
+  company      Company?      @relation(fields: [companyId], references: [id])
 
   @@index([username])
   @@index([companyId])
 }
 
 model PutawayBatch {
-  id          String        @id @default(cuid())
-  locationId  String
-  location    Location      @relation(fields: [locationId], references: [id])
-  createdAt   DateTime      @default(now())
-  updatedAt   DateTime      @updatedAt
+  id           String        @id @default(cuid())
+  locationId   String
+  createdAt    DateTime      @default(now())
+  updatedAt    DateTime      @updatedAt
+  status       String        @default("COMPLETED")
+  location     Location      @relation(fields: [locationId], references: [id])
   transactions Transaction[]
-  status      String        @default("COMPLETED") // COMPLETED, EDITED, UNDONE
 
   @@index([locationId])
 }
